Fix snippet picker clipped by fmtbar overflow: use position fixed + bounding rect; build 2026-05-10.56

--- a/signal/css/editor-components.css
+++ b/signal/css/editor-components.css
@@ -99,9 +99,7 @@
 }
 
 .snippet-picker {
-  position: absolute;
-  top: calc(100% + 4px);
-  left: 0;
+  position: fixed;
   z-index: 200;
   min-width: 160px;
   background: var(--color-surface);
